
2007-02-12 moj
 * WorkflowEdit now has a render function
 * Nested ifs are now collapsed
 * Special case for XHTML component added.

2007-02-15 cjg
 * Removed the SOAP encoding from the SOAP tool.
 * Merged xsd into wsdl

2007-02-19 cjg
 * Added cache to MetaField::Fields to prevent execsive rendering times.

2007-02-19 cjg
 * Editorial restrictions now in dataset "eprint" rather than "buffer".

2007-02-19 cjg
 * It is now possible to search for a null date using "","EX"

2007-02-19 cjg
 * Rewrite now automatically updates static pages where possible. This code
    has duplicates of stuff in generate_static and isn't smart about the auto
    javascript and css or themes (yet).

2007-02-19 cjg
 * Changed Convert::PlainText into house code style.

2007-02-19 cjg
 * Added has_role method to User.pm
 * Fixed broken calls to $user->has_priv to use $user->has_role instead.

2007-02-19 cjg
 * If a title contains a link, it no longer shows the URL in the <title> 
    element.

2007-02-19 cjg
 * Cookie values are now randomised every time the login page is rendered.

2007-02-19 cjg
 * Pagerange now adds zero to to and from in ordering to force them to be
    numeric. so "foo" becomes "0" and "1234a" becomes "1234".

2007-03-02 cjg
 * Added a filter to eprints under review so that it only lists ones in
    buffer, not all those matching the scope.

2007-03-02 moj
 * Added platform subs for hash filename
 * Removed timestamp call from DataObj/Document.pm

2007-03-07 cjg
 * Fixed bug that meant subjects were not ordered in input.

2007-03-07 cjg
 * Fixed bug in database which returned empty strings in list of index ids.

2007-03-09 cjg
 * Fixed issue in autocompleter file and simple_file which didn't lowercase 
    keys.

2007-03-11 tdb
 * Fix typo in Platform::get_hash_name

2007-03-12 tdb
 * Moved df_dir into Platform
 * Added support for Filesys::Df, Filesys::DfPortable and df (support for more
    file system types than Filesys::DiskSpace)