@@ -6311,3 +6311,6 @@ PACKAGE: 2.2.99.2
  * Moved df_dir into Platform
  * Added support for Filesys::Df, Filesys::DfPortable and df (support for more
     file system types than Filesys::DiskSpace)
+
+2007-03-12 cjg
+ * Added missing phrases mentioned in #2873
